Fixes mobile overflow-x, and home image

--- a/css/base.css
+++ b/css/base.css
@@ -22,6 +22,7 @@ html {
     width: 100vw;
     min-width: 100vw;
     overflow-x: hidden;
+    position: fixed;
 }
 
 body {
@@ -35,6 +36,7 @@ body {
     align-items: center;
     margin: 0;
     overflow-x: hidden;
+    position: fixed;
 }
 
 /* Background and mobile controls */
